Fixed overlap of currency icon with quantity.

--- a/src/styles/dailies.scss
+++ b/src/styles/dailies.scss
@@ -262,6 +262,7 @@
   font-size: 15px;
   color: #6D4916;
   padding-right: 19px;
+  display: inline-block;
 
   &:not(.no-icon):after {
     content: "";
